k3s/media/audiobookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media
  labels: { app: audiobookshelf }
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: audiobookshelf
