k3s/media/audiobookshelf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiobookshelf
  namespace: media
spec:
  entryPoints: [web]
  routes:
    - match: |
        Host(`audiobookshelf.rahl.cc`) ||
        Host(`audiobookshelf.fractal-financial.com`) ||
        Host(`abs.rahl.cc`) ||
        Host(`abs.fractal-financial.com`)
      kind: Rule
      services:
        - name: audiobookshelf
          port: 80
